# masters

./: .gitignore  CITATION.cff  LICENSE  NEXT_STEPS.md  README.md  REFACTOR_SUMMARY.md  THESIS_CLAIMS.md  mechanism_explorer_v2.html  package-lock.json  package.json
onlinev2/: .gitignore  README.md  experiments.py  mvp.py  pyproject.toml  wagering_mechanism_explorer.html
onlinev2/data_generation/: data_generation_3methods.py
onlinev2/docs/: THESIS_WORDING_LATENT_BENCHMARK.md
onlinev2/online_algorithms/: effective_wager.py  online_skill.py  staking.py
onlinev2/payoff/: payoff.py  scoring.py
onlinev2/scripts/: audit_fresh_run.py  audit_per_quantile_coverage.py  audit_recalibration_elia.py  capture_pre_recalibration_snapshot.py  gen_diagram.py  gen_final_plots.R  gen_slides_plots.py  gen_slides_r.R  generate_michael_fixtures.jl  generate_presentation_plots.py  headline_per_quantile_coverage.py  run_weight_learning.py
onlinev2/tests/: conftest.py  test_a3_tail_extrapolation.py  test_adversaries_theory.py  test_adversary_properties.py  test_aggregation_unit.py  test_arbitrageur.py  test_audit_fixes.py  test_baseline_cache_versioning.py  test_behaviour_boundary.py  test_behaviour_catalogue.py  test_benchmark_contract.py  test_cap_skill_intermittent.py  test_causal_normalize.py  test_current_confidence_warning.py  test_day_ahead_warmup.py  test_detectors.py  test_dgp_cross_n_stability.py  test_f1_coalition_aggregation_auto.py  test_forecaster_training_diagnostic.py  test_lagged_confidence.py  test_m1_shapley_reproducibility.py  test_metrics.py  test_michael_allocation.py  test_michael_port_per_tau.py  test_mlp_seed_reproducibility.py  (+18 more)
(+1245 files in other folders)
